[fix] Fixed visibility of "Recent Commands" tab on device page

--- a/openwisp_controller/connection/static/connection/css/command-inline.css
+++ b/openwisp_controller/connection/static/connection/css/command-inline.css
@@ -14,7 +14,7 @@ button[disabled] {
 #command_set-group .add-row,
 #command_set-group .advanced_editor,
 #command_set-group .form-row.field-type,
-li.commands {
+li.commands:not(.recent) {
   display: none !important;
 }
 
